fidoconfig 0.91
---------------

----- cvs ci ------
Mon Feb  7 22:37:12 NOVT 2000
max:
* fconf2squish: don't write "-$g0" for "0" groups
* "grep -i" in linkedto script

----- cvs ci ------
Sun Jan  6 01:24:10 NOVT 2000
max:
* add token noProcessBundles

----- cvs ci ------
Sat Feb  5 02:36:03 NOVT 2000
max:
* bugfix for groups: allocation memory for \0 (patch from Serguei)
* export, import, mandatory makes as unsigned int

----- cvs ci ------
Tue Feb  1 22:19:01 NOVT 2000
max:
* added getEchoArea()
* getArea() returns echo & local areas
* added autoAreaCreateDefaults & autoFileCreateDefaults to tparser
* added PublicGroup to tparser
* changes in documentation
* do not transtale groups to lowercase - we have case unsensitive _tokens_

----- cvs ci ------
Sun Jan 30 17:06:45 NOVT 2000
max:
* added token areafixOrigin

----- cvs ci ------
Sun Jan 30 13:09:29 NOVT 2000
max:
* moved proposal to husky-common
* change doc file (escape sequences)

----- cvs ci ------
Fri Jan 28 21:40:00 CET 2000
sms:
* changed groups from chars to strings

----- cvs ci ------
Sat Jan 29 00:32:51 NOVT 2000
max:
* change makefiles to compile with $(LIB) & $(OBJ)
patch from Serguei Revtov:
* make fidoconfig compiling on sun (makefile.sun) again

----- cvs ci ------
Thu Jan 27 20:59:22 CET 2000
mtt:
* changed in makefile.common $(A) to $(LIB)

----- cvs ci ------
Thu Jan 27 18:42:50 CET 2000
mtt (patch from Alex Semyanka)
* added NetmailExtern (carbonExtern for netmails)
* added processPkt for calling pktdate etc.

----- cvs ci ------
Tue Jan 25 13:46:13 NOVT 2000
max (patch from Serguei Revtov):
* linkedto: read config file in current directory

----- cvs ci ------
Tue Jan 25 00:43:18 NOVT 2000
max (patch from Serguei Revtov):
* make fidoconfig compiling on sun (makefile.sun)

----- cvs ci ------
Sat Jan 22 11:16:22 NOVT 2000
max:
* delete old level access code

----- cvs ci ------
Sat  22 Jan 2000 00:36:55 CET
tobi (patch from Eduard Dulich)