@@ -6,6 +6,9 @@ Mon Feb  7 22:37:12 NOVT 2000
 max:
 * fconf2squish: don't write "-$g0" for "0" groups
 * "grep -i" in linkedto script
+patch from Alex Bronin (2:5049/36):
+* using system copy/move functions in win32 and os2 (ifdef USE_SYSTEM_COPY)
+* added ExecOnFile keyword
 
 ----- cvs ci ------
 Sun Jan  6 01:24:10 NOVT 2000
